--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
 	add_compile_options(-static-libgcc)
 	add_compile_options(-std=gnu99)
 	add_compile_options(-O3)
+	add_compile_options(-fsanitize=address)
+	add_link_options(-fsanitize=address)
 
 	# Compiles the scanner with Flex.
 	add_custom_command(
